--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
 body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    background-color: blue;
 }
 
 #wrapper{
     display: grid;
     place-items: center;
-    background-color: rgb(0, 92, 92);
+    background-color: rgba(0, 192, 206, 0.534);
+}
+
+#container {
+    background: #005c5c;
+    padding: 10px 20px;
+    border-radius: 12px;
+    height: 100vh;
+    width: 400px;
 }
 
 header h1{
-    padding: 10px;
+    padding: 5px;
     font-size: 20px;
-    color: #48d1cc;
+    color: rgb(0, 192, 206);
     text-align: center;
 }
 
@@ -22,7 +29,13 @@ header h1{
     font-style: italic;
     font-size: 15px;
     text-decoration: underline;
+    text-align: center;
 }
+
+p {
+    color: #fff;
+}
+
 
 input[type=text],
 input[type=text] {
@@ -35,17 +48,26 @@ input[type=text] {
 }
 
 button {
+    width: 50%;
+    padding: 40px 12px;
     background-color: rgba(255, 0, 0, 0.466);
-    columns: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
+    border: 1px solid #fff;
+    border-radius: 5px;
     cursor: pointer;
-    width: 100%;
-    font-size: 20px;
+    margin-left: 25%;
+    margin-top: 10px;
+    font-size: 60px;
     color: #fff;
 }
 
-p{
-    color: #fff;
+
+a {
+    text-decoration: none;
+    color:#005c5c;
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
 }
+
+
+
